perf: REST API 따라 POST 대신 PATCH 사용
PATCH는 데이터의 일부 내용 수정할 때 사용된다.

--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -107,7 +107,7 @@
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </div>
-                                        <form action="/mypage/change-password" method="POST">
+                                        <form action="/mypage/change-password?_method=PATCH" method="POST">
                                             <div class="modal-body">
                                                 <div class="form-group row">
                                                     <label for="input_id" class="col-sm-4 col-form-label">아이디</label>
