style: API 변경 및 swagger summary 추가

--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -171,7 +171,7 @@
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </div>
-                                        <form action="/mypage/withdrawal" method="POST" onsubmit="if(!confirm('회원을 탈퇴하시겠습니까?')) {return false; }">
+                                        <form action="/mypage/withdrawal?_method=DELETE" method="POST" onsubmit="if(!confirm('회원을 탈퇴하시겠습니까?')) {return false; }">
                                             <div class="modal-body">
                                                 <div class="form-group">
                                                     <p>회원 탈퇴를 희망하시면 아래 본인 아이디와 비밀번호를 입력해주세요.</p>
