style: API 변경 및 swagger summary 추가

--- a/views/community/post.ejs
+++ b/views/community/post.ejs
@@ -178,7 +178,7 @@
         <!-- Divider-->
         <hr class="my-4" />
         <!-- 댓글 작성 -->
-        <form action="/community/<%= category %>/comment-post" method="POST">
+        <form action="/community/<%= category %>/comment" method="POST">
             <div class="form-group">
                 <textarea name="description" id="description" cols="30" rows="5" class="form-control"
                     placeholder="한 번 작성한 리뷰는 삭제 및 수정이 불가합니다. (5글자 이상부터 등록 가능)"></textarea>
@@ -228,7 +228,7 @@
                     </div>
                     <% if (comment.writer == user) { %>
                     <div class="col-md-2">
-                        <form action="/community/delete/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline" onsubmit="if(!confirm('삭제하시겠습니까?')){return false;}">
+                        <form action="/community/<%= comment._id %>?_method=DELETE" method="POST" class="d-inline" onsubmit="if(!confirm('삭제하시겠습니까?')){return false;}">
                             <input type="submit" class="btn btn-danger" value="삭제">
                             <input type="hidden" value="<%= category %>" name="category">
                             <input type="hidden" value="<%= posting._id %>" name="posting_id">
