--- a/views/community/write.ejs
+++ b/views/community/write.ejs
@@ -149,7 +149,7 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <!-- Post preview-->
-                    <form class="post-preview" action="/community/<%= category %>-post" method="POST">
+                    <form class="post-preview" action="/community/<%= category %>-write" method="POST">
                         <div class="form-group">
                             <label for="inputTitle">제목</label>
                             <input type="text" class="form-control" id="inputTitle" name="inputTitle" placeholder="제목">
