update: server code

--- a/views/admin/hospitals.ejs
+++ b/views/admin/hospitals.ejs
@@ -18,28 +18,28 @@
         <a href="/admin/json" class="btn btn-primary">JSON 형태로 보기</a>
 
         <br><br>
-        <form action="/admin/hospitals/2010" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2010" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">종합병원 Reload</button>
         </form>
-        <form action="/admin/hospitals/2030" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2030" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">병원 Reload</button>
         </form>
-        <form action="/admin/hospitals/2040" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2040" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">요양병원 Reload</button>
         </form>
-        <form action="/admin/hospitals/2050" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2050" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">치과 Reload</button>
         </form>
-        <form action="/admin/hospitals/2060" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2060" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">한방 Reload</button>
         </form>
-        <form action="/admin/hospitals/2070" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2070" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">의원 Reload</button>
         </form>
-        <form action="/admin/hospitals/2080" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2080" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">보건기관 Reload</button>
         </form>
-        <form action="/admin/hospitals/2090" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
+        <form action="/admin/hospitals_data/2090" method="POST" class="d-inline" onsubmit="if(!confirm('병원API를 새로 불러오시겠습니까?')){return false;}">
             <button type="submit" class="btn btn-danger">조산원 Reload</button>
         </form>
         
